--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">XenMetal</a>
+      <a class="navbar-brand" href="#">HodlHodl</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,7 +38,7 @@
     <main role="main">
 	    <div class="jumbotron">
 	        <div class="container">
-	          <h1 class="display-3">TwitchToolkit</h1>
+	          <h1 class="display-3">TwitchToolkit - XenMetal's List</h1>
 	          <p>TwitchToolkit is a mod written by Twitch.tv/hodlhodl that integrates storytelling decisions into chat votes, awards viewers coins for watching, and those coins can be spent on items/events in game.</p>
 	          	<ul class="list-group">
 					<li class="list-group-item">!bal - check balance and karma rate</li>
