--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    <div class="jumbotron">
 	        <div class="container">
 	          <h1 class="display-3">TwitchToolkit - XenMetal's List</h1>
-	          <p>TwitchToolkit is a mod written by Twitch.tv/hodlhodl that integrates storytelling decisions into chat votes, awards viewers coins for watching, and those coins can be spent on items/events in game.</p>
+	          <p>TwitchToolkit is a mod written by Twitch.tv/hodlhodl that integrates storytelling decisions into chat votes, awards viewers coins for watching, and those coins can be spent on items/events in game.  This item list is pulled from XenMetal's Modded Items list.</p>
 	          	<ul class="list-group">
 					<li class="list-group-item">!bal - check balance and karma rate</li>
 					<li class="list-group-item">!buyevent - Syntax: !buyevent skillincrease - purchase an event</li>
